{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 2206,
  "lineage": "c1f75dd7-541c-e6cd-b33b-90b1be84a54d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64514,
            "arn": "arn:aws:ec2:eu-west-2:463470963000:transit-gateway/tgw-096a7df802135c272",
            "association_default_route_table_id": "tgw-rtb-07e27409ba152011d",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Main Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-096a7df802135c272",
            "multicast_support": "disable",
            "owner_id": "463470963000",
            "propagation_default_route_table_id": "tgw-rtb-07e27409ba152011d",
            "tags": {
              "Environment": "Dev",
              "Name": "main-tgw",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "main-tgw",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "account_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/account-service-tg/5907e2b3cae5bbca",
            "arn_suffix": "targetgroup/account-service-tg/5907e2b3cae5bbca",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/account-service-tg/5907e2b3cae5bbca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "account-service-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/auth-service-tg/ef72a4982acfc801",
            "arn_suffix": "targetgroup/auth-service-tg/ef72a4982acfc801",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/auth-service-tg/ef72a4982acfc801",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-service-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/bastion-tg/841ad8cc6d3d94a0",
            "arn_suffix": "targetgroup/bastion-tg/841ad8cc6d3d94a0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/bastion-tg/841ad8cc6d3d94a0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bastion-tg",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "transaction_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/transaction-service-tg/a9d1d998254e531c",
            "arn_suffix": "targetgroup/transaction-service-tg/a9d1d998254e531c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/transaction-service-tg/a9d1d998254e531c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "transaction-service-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0f4ea82e21dc5f13e",
            "description": "Security Group for Banking ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ea82e21dc5f13e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere (redirect)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "banking-alb-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-007d6c5708644909d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-007d6c5708644909d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.255.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0f495da6e11b2e40d",
            "description": "Security Group for Fraud Detection Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f495da6e11b2e40d",
            "ingress": [],
            "name": "lambda-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "Lambda Security Group",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Lambda Security Group",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-04989e8241076c5cf",
            "description": "Security Group for Aurora Cluster",
            "egress": [],
            "id": "sg-04989e8241076c5cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aurora-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "Aurora Security Group",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Aurora Security Group",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bf83e01b56968a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-09593e51c0d362d12",
            "description": "Security Group for Redis Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09593e51c0d362d12",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "Redis Security Group",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Redis Security Group",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bf83e01b56968a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-057133ac48e01e6bd",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-057133ac48e01e6bd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad6318fc946461d1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "banking-eks-cluster-2024112710102149800000001e",
            "name_prefix": "banking-eks-cluster-",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "banking-eks-cluster",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "banking-eks-cluster",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0ad6318fc946461d1",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad6318fc946461d1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057133ac48e01e6bd"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057133ac48e01e6bd"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057133ac48e01e6bd"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057133ac48e01e6bd"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057133ac48e01e6bd"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057133ac48e01e6bd"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "banking-eks-node-2024112710102012010000001d",
            "name_prefix": "banking-eks-node-",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "banking-eks-node",
              "Project": "Global Bank Migration",
              "Terraform": "true",
              "kubernetes.io/cluster/banking-eks": "owned"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "banking-eks-node",
              "Project": "Global Bank Migration",
              "Terraform": "true",
              "kubernetes.io/cluster/banking-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1043061525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-057133ac48e01e6bd",
            "security_group_rule_id": "sgr-090b29ce0a8cc2302",
            "self": false,
            "source_security_group_id": "sg-0ad6318fc946461d1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-217276804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-06674fa9eaaee5235",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-505946178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-0f68396f8a112692e",
            "self": false,
            "source_security_group_id": "sg-057133ac48e01e6bd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1113053564",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-036eaf682193b025c",
            "self": false,
            "source_security_group_id": "sg-057133ac48e01e6bd",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2333458154",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-01f314ced61baa11c",
            "self": false,
            "source_security_group_id": "sg-057133ac48e01e6bd",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2554954443",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-0bbb6ce02df2491ff",
            "self": false,
            "source_security_group_id": "sg-057133ac48e01e6bd",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4243108096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-0ef4ab260ff53a807",
            "self": false,
            "source_security_group_id": "sg-057133ac48e01e6bd",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2090140488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-0db5e24bae7f9e466",
            "self": false,
            "source_security_group_id": "sg-057133ac48e01e6bd",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-20204135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-0cf7fb0f28b9832b0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2886041437",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-0131a7c73b286b3fc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-140172466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ad6318fc946461d1",
            "security_group_rule_id": "sgr-050ea190e37c50673",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "interface_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-00804de75fea78233",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00804de75fea78233",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "production-interface-endpoint-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "production-ecr-interface-endpoint-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-ecr-interface-endpoint-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc-endpoint/vpce-0ac8695b8cbbced62",
            "dns_entry": [
              {
                "dns_name": "vpce-0ac8695b8cbbced62-35a1gmzf.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0ac8695b8cbbced62-35a1gmzf-eu-west-2a.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0ac8695b8cbbced62-35a1gmzf-eu-west-2b.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ac8695b8cbbced62",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04d6a895e8d421d1d",
              "eni-0525804c55cc793c4"
            ],
            "owner_id": "463470963000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00804de75fea78233"
            ],
            "service_name": "com.amazonaws.eu-west-2.ecr.api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.2.26",
                "subnet_id": "subnet-089e924ac6c9c1d40"
              },
              {
                "ipv4": "10.1.4.139",
                "subnet_id": "subnet-0e0969fa0dc42af5d"
              }
            ],
            "subnet_ids": [
              "subnet-089e924ac6c9c1d40",
              "subnet-0e0969fa0dc42af5d"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.storage.aws_security_group.interface_endpoints_sg",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc-endpoint/vpce-040609739f59152d6",
            "dns_entry": [
              {
                "dns_name": "vpce-040609739f59152d6-e5bqejj7.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-040609739f59152d6-e5bqejj7-eu-west-2a.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-040609739f59152d6-e5bqejj7-eu-west-2b.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-040609739f59152d6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0602968315a1f775f",
              "eni-0f3b0ffeaeba34e99"
            ],
            "owner_id": "463470963000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00804de75fea78233"
            ],
            "service_name": "com.amazonaws.eu-west-2.ecr.dkr",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.2.187",
                "subnet_id": "subnet-089e924ac6c9c1d40"
              },
              {
                "ipv4": "10.1.4.10",
                "subnet_id": "subnet-0e0969fa0dc42af5d"
              }
            ],
            "subnet_ids": [
              "subnet-089e924ac6c9c1d40",
              "subnet-0e0969fa0dc42af5d"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.storage.aws_security_group.interface_endpoints_sg",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc-endpoint/vpce-08dd8d10e4e433c45",
            "dns_entry": [
              {
                "dns_name": "vpce-08dd8d10e4e433c45-icubv7md.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-08dd8d10e4e433c45-icubv7md-eu-west-2a.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-08dd8d10e4e433c45-icubv7md-eu-west-2b.dkr.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "dkr.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z01014201MEDNUYZN3URS"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z01014201MEDNUYZN3URS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08dd8d10e4e433c45",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d5f3edd6b073a6b0",
              "eni-0eec9210b1c127e7b"
            ],
            "owner_id": "463470963000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00804de75fea78233"
            ],
            "service_name": "com.amazonaws.eu-west-2.ecr.dkr",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.2.31",
                "subnet_id": "subnet-089e924ac6c9c1d40"
              },
              {
                "ipv4": "10.1.4.45",
                "subnet_id": "subnet-0e0969fa0dc42af5d"
              }
            ],
            "subnet_ids": [
              "subnet-089e924ac6c9c1d40",
              "subnet-0e0969fa0dc42af5d"
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "production-ecr-endpoint",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-ecr-endpoint",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.storage.aws_security_group.interface_endpoints_sg",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0c2d16fa398d8c3bf",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0564143da3c783365",
              "subnet-0658e746452ffded7"
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "data-tgw-attachment",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "data-tgw-attachment",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_id": "vpc-06bf83e01b56968a1",
            "vpc_owner_id": "463470963000"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "tgw_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-10.1.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a0dbf0e705ac8f8a3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0dbf0e705ac8f8a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-10.3.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.3.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a0dbf0e705ac8f8a2218071545",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0dbf0e705ac8f8a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-10.4.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a0dbf0e705ac8f8a2398100704",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0dbf0e705ac8f8a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_no_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-0a0dbf0e705ac8f8a",
            "id": "rtb-0a0dbf0e705ac8f8a",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "data-private-no-internet",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "data-private-no-internet",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bf83e01b56968a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.2.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e17f99513dd67b47",
            "route_table_id": "rtb-0a0dbf0e705ac8f8a",
            "subnet_id": "subnet-0658e746452ffded7"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.2.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1cd87f5b76e36b4",
            "route_table_id": "rtb-0a0dbf0e705ac8f8a",
            "subnet_id": "subnet-0564143da3c783365"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0ccf6c7d315d9953b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ccf6c7d315d9953b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "data-db-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "data-db-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "data-db-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bf83e01b56968a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.2.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-0658e746452ffded7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0658e746452ffded7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "data-private-10.2.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "data-private-10.2.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06bf83e01b56968a1"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "10.2.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-0564143da3c783365",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0564143da3c783365",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "data-private-10.2.2.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "data-private-10.2.2.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06bf83e01b56968a1"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc/vpc-06bf83e01b56968a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-08a9c7a7ec891939f",
            "default_route_table_id": "rtb-0a19bf5e7ff21337e",
            "default_security_group_id": "sg-0f1c0793c55360ab3",
            "dhcp_options_id": "dopt-0ff17d7f379be5815",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bf83e01b56968a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a19bf5e7ff21337e",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "Dev",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc-endpoint/vpce-021c23dc27a7d3597",
            "cidr_blocks": [
              "35.71.111.0/25",
              "52.94.15.0/24",
              "35.71.111.128/26"
            ],
            "id": "vpce-021c23dc27a7d3597",
            "owner_id": "463470963000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-b3a742da",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.eu-west-2.dynamodb",
            "state": "available",
            "tags": {
              "Environment": "Dev",
              "Name": "data-dynamodb-endpoint",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "data-dynamodb-endpoint",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06bf83e01b56968a1"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc-endpoint/vpce-0dbe339ea53a61bbc",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-0dbe339ea53a61bbc",
            "owner_id": "463470963000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.eu-west-2.s3",
            "state": "available",
            "tags": {
              "Environment": "Dev",
              "Name": "data-s3-endpoint",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "data-s3-endpoint",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06bf83e01b56968a1"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0eeb0104cd55dc6a9",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-073db256e44d552c8",
              "subnet-0f038c195fe4360a2"
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "management-tgw-attachment",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "management-tgw-attachment",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_id": "vpc-0dd511b771bd55c3d",
            "vpc_owner_id": "463470963000"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:internet-gateway/igw-07238622ba974c25b",
            "id": "igw-07238622ba974c25b",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "Dev",
              "Name": "management-igw",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "management-igw",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "tgw_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.3.1.0/24-10.1.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05527a1cfcf737aa93322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05527a1cfcf737aa9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.3.1.0/24-10.2.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05527a1cfcf737aa91218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05527a1cfcf737aa9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.3.1.0/24-10.4.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05527a1cfcf737aa92398100704",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05527a1cfcf737aa9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.3.3.0/24-10.1.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1a834f781ef26df3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1a834f781ef26df",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.3.3.0/24-10.2.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1a834f781ef26df1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1a834f781ef26df",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.3.3.0/24-10.4.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1a834f781ef26df2398100704",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1a834f781ef26df",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_no_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.3.1.0/24",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-05527a1cfcf737aa9",
            "id": "rtb-05527a1cfcf737aa9",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07238622ba974c25b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "management-public-10.3.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "management-public-10.3.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.3.3.0/24",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-0c1a834f781ef26df",
            "id": "rtb-0c1a834f781ef26df",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07238622ba974c25b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "management-public-10.3.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "management-public-10.3.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.3.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b422d453b4705767",
            "route_table_id": "rtb-05527a1cfcf737aa9",
            "subnet_id": "subnet-0f038c195fe4360a2"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.3.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04da115bbd8577a9f",
            "route_table_id": "rtb-0c1a834f781ef26df",
            "subnet_id": "subnet-073db256e44d552c8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0635c64a9faae5076",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0635c64a9faae5076",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b48d06e93ebe3725"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "management-admin-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "management-admin-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "management-admin-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_security_group.mgmt_bastion",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0b48d06e93ebe3725",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b48d06e93ebe3725",
            "ingress": [
              {
                "cidr_blocks": [
                  "89.242.83.136/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "management-bastion-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "management-bastion-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "management-bastion-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.3.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-0f038c195fe4360a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f038c195fe4360a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "management-public-10.3.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "management-public-10.3.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "10.3.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-073db256e44d552c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.3.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073db256e44d552c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "management-public-10.3.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "management-public-10.3.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dd511b771bd55c3d"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc/vpc-0dd511b771bd55c3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-030464f99fa9e3880",
            "default_route_table_id": "rtb-0f2c0dd599ebbeeae",
            "default_security_group_id": "sg-08885f4ef58444f47",
            "dhcp_options_id": "dopt-0ff17d7f379be5815",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd511b771bd55c3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2c0dd599ebbeeae",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "Dev",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-06ee5ad9562ffa085",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-089e924ac6c9c1d40",
              "subnet-0e0969fa0dc42af5d"
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "production-tgw-attachment",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-tgw-attachment",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_id": "vpc-0a77d56e1220164dd",
            "vpc_owner_id": "463470963000"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0735ad9e7e3506799",
            "arn": "arn:aws:ec2:eu-west-2:463470963000:elastic-ip/eipalloc-0735ad9e7e3506799",
            "association_id": "eipassoc-0cb2fabfbba90ba43",
            "domain": "vpc",
            "id": "eipalloc-0735ad9e7e3506799",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-08da38a56f082d204",
            "private_dns": "ip-10-1-1-127.eu-west-2.compute.internal",
            "private_ip": "10.1.1.127",
            "public_dns": "ec2-18-171-11-18.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.11.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6bf47f101f3b3eb",
            "arn": "arn:aws:ec2:eu-west-2:463470963000:elastic-ip/eipalloc-0a6bf47f101f3b3eb",
            "association_id": "eipassoc-01c654d6cc7ad0bf3",
            "domain": "vpc",
            "id": "eipalloc-0a6bf47f101f3b3eb",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-01f3af8879873b168",
            "private_dns": "ip-10-1-3-232.eu-west-2.compute.internal",
            "private_ip": "10.1.3.232",
            "public_dns": "ec2-35-176-201-116.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.201.116",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:internet-gateway/igw-087109092f3de17dd",
            "id": "igw-087109092f3de17dd",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "Dev",
              "Name": "production-igw",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-igw",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0735ad9e7e3506799",
            "association_id": "eipassoc-0cb2fabfbba90ba43",
            "connectivity_type": "public",
            "id": "nat-0e893b82ba5fed595",
            "network_interface_id": "eni-08da38a56f082d204",
            "private_ip": "10.1.1.127",
            "public_ip": "18.171.11.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e398adf1fdc4ad17"
          },
          "dependencies": [
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6bf47f101f3b3eb",
            "association_id": "eipassoc-01c654d6cc7ad0bf3",
            "connectivity_type": "public",
            "id": "nat-0ef18f1e9e14f668d",
            "network_interface_id": "eni-01f3af8879873b168",
            "private_ip": "10.1.3.232",
            "public_ip": "35.176.201.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f4711709e259582"
          },
          "dependencies": [
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "tgw_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24-10.2.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ec22bc015d865711218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ec22bc015d86571",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.1.0/24-10.3.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.3.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ec22bc015d865712218071545",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ec22bc015d86571",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.1.0/24-10.4.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ec22bc015d865712398100704",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ec22bc015d86571",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.2.0/24-10.2.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-076338992a879be6c1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076338992a879be6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.2.0/24-10.3.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.3.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-076338992a879be6c2218071545",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076338992a879be6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.2.0/24-10.4.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-076338992a879be6c2398100704",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076338992a879be6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.3.0/24-10.2.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-020bcdc2285bae13b1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020bcdc2285bae13b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.3.0/24-10.3.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.3.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-020bcdc2285bae13b2218071545",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020bcdc2285bae13b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.3.0/24-10.4.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-020bcdc2285bae13b2398100704",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020bcdc2285bae13b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.4.0/24-10.2.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c597355967eccd161218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c597355967eccd16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.4.0/24-10.3.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.3.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c597355967eccd162218071545",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c597355967eccd16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.4.0/24-10.4.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c597355967eccd162398100704",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c597355967eccd16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.2.0/24",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-076338992a879be6c",
            "id": "rtb-076338992a879be6c",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e893b82ba5fed595",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "production-private-nat-10.1.2.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-private-nat-10.1.2.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.4.0/24",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-0c597355967eccd16",
            "id": "rtb-0c597355967eccd16",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e893b82ba5fed595",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "production-private-nat-10.1.4.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-private-nat-10.1.4.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_no_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-03ec22bc015d86571",
            "id": "rtb-03ec22bc015d86571",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087109092f3de17dd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "production-public-10.1.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-public-10.1.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-020bcdc2285bae13b",
            "id": "rtb-020bcdc2285bae13b",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087109092f3de17dd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "production-public-10.1.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-public-10.1.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a58ae7de3435aa96",
            "route_table_id": "rtb-076338992a879be6c",
            "subnet_id": "subnet-089e924ac6c9c1d40"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9bde2c65d120f33",
            "route_table_id": "rtb-0c597355967eccd16",
            "subnet_id": "subnet-0e0969fa0dc42af5d"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b17fc590a71e258",
            "route_table_id": "rtb-03ec22bc015d86571",
            "subnet_id": "subnet-0e398adf1fdc4ad17"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2d9601e88f5831c",
            "route_table_id": "rtb-020bcdc2285bae13b",
            "subnet_id": "subnet-05f4711709e259582"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0ef76c5a0795c908d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef76c5a0795c908d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9628cfb99256fcb"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "production-app-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "production-app-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-app-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_security_group.prod_web",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0f9628cfb99256fcb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9628cfb99256fcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-web-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "production-web-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-web-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-089e924ac6c9c1d40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089e924ac6c9c1d40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "production-private-10.1.2.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-private-10.1.2.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "10.1.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-0e0969fa0dc42af5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0969fa0dc42af5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "production-private-10.1.4.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-private-10.1.4.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-0e398adf1fdc4ad17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e398adf1fdc4ad17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "production-public-10.1.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-public-10.1.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-05f4711709e259582",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f4711709e259582",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "production-public-10.1.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "production-public-10.1.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a77d56e1220164dd"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc/vpc-0a77d56e1220164dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-016f66b7647fe395e",
            "default_route_table_id": "rtb-038c52d0deb21b2c2",
            "default_security_group_id": "sg-015f165853e9650d6",
            "dhcp_options_id": "dopt-0ff17d7f379be5815",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a77d56e1220164dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038c52d0deb21b2c2",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "Dev",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0d2039e2723a758cc",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-01f451ebc0ab347f2",
              "subnet-049b217bcee9a4d83"
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "security-tgw-attachment",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "security-tgw-attachment",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_id": "vpc-0910728a9a5d31f0d",
            "vpc_owner_id": "463470963000"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_subnet.private",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:internet-gateway/igw-03e802eb1368784f8",
            "id": "igw-03e802eb1368784f8",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "Dev",
              "Name": "security-igw",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "security-igw",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0910728a9a5d31f0d"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "tgw_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.4.1.0/24-10.1.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d901adf9bb3fff03322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d901adf9bb3fff0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.4.1.0/24-10.2.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d901adf9bb3fff01218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d901adf9bb3fff0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.4.1.0/24-10.3.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.3.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d901adf9bb3fff02218071545",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d901adf9bb3fff0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.4.3.0/24-10.1.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0173134b4d62cc7f53322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0173134b4d62cc7f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.4.3.0/24-10.2.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0173134b4d62cc7f51218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0173134b4d62cc7f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.4.3.0/24-10.3.0.0-16",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.3.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0173134b4d62cc7f52218071545",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0173134b4d62cc7f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-096a7df802135c272",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_eip.nat",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_nat_gateway.nat",
            "module.vpcs.aws_route_table.private_nat",
            "module.vpcs.aws_route_table.private_no_internet",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_no_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.4.1.0/24",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-02d901adf9bb3fff0",
            "id": "rtb-02d901adf9bb3fff0",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e802eb1368784f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "security-public-10.4.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "security-public-10.4.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0910728a9a5d31f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.4.3.0/24",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-0173134b4d62cc7f5",
            "id": "rtb-0173134b4d62cc7f5",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e802eb1368784f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-096a7df802135c272",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "security-public-10.4.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "security-public-10.4.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0910728a9a5d31f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.4.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a2d6f833c90708",
            "route_table_id": "rtb-02d901adf9bb3fff0",
            "subnet_id": "subnet-01f451ebc0ab347f2"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        },
        {
          "index_key": "10.4.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092be04d74a4b949b",
            "route_table_id": "rtb-0173134b4d62cc7f5",
            "subnet_id": "subnet-049b217bcee9a4d83"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.vpcs.aws_internet_gateway.igw",
            "module.vpcs.aws_route_table.public",
            "module.vpcs.aws_subnet.public",
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-00c26213759142852",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c26213759142852",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 514,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 514
              }
            ],
            "name": "security-logging-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "security-logging-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "security-logging-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0910728a9a5d31f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-037fb464b4020ec2d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037fb464b4020ec2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "security-monitoring-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "security-monitoring-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "security-monitoring-sg",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0910728a9a5d31f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.4.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-01f451ebc0ab347f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f451ebc0ab347f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "security-public-10.4.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "security-public-10.4.1.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0910728a9a5d31f0d"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "10.4.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-049b217bcee9a4d83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.4.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049b217bcee9a4d83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "security-public-10.4.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "security-public-10.4.3.0/24",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0910728a9a5d31f0d"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc/vpc-0910728a9a5d31f0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-00a7f9bf7b236b8fe",
            "default_route_table_id": "rtb-04ae0ed78ace60473",
            "default_security_group_id": "sg-09cdb91754c0fb18a",
            "dhcp_options_id": "dopt-0ff17d7f379be5815",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0910728a9a5d31f0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ae0ed78ace60473",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "Dev",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Project": "Global Bank Migration",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}